# digilut

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build_install.yaml  test.yaml
about/: index.html
approach/: index.html
challenge/: index.html
cli/: index.html
cli/commands/: index.html
cli/new_to_typer/: index.html
digilut/: analyze_patches.py  bbox_filtering.py  cross_val_train.py  dataset.py  embeddings.py  eval.py  heatmap.py  logs.py  main.py  split_train_test_labels.py  tiff_slide.py  undersample.py
digilut/experiment_sklearn/: cross_val_train.py  embeddings.py
digilut/lightning/: compute_classif_metrics.py  config.py  dataset.py  infer.py  loss.py  model.py  train.py  utils.py
digilut/pyfast/: labels.py  main.py  patchify.py  pre_patchify.py
digilut/tiles/: create_labels.py  extract_tiles.py  filter_tiles.py  main.py
digilut/train/: dataset.py  (+3 more)
docs/: about.md  approach.md  challenge.md  index.md  install.md  postprocessing.md  references.md  results.md  run.md  trustii.md
install/: index.html
notebooks/: cross_val_with_embeddings.ipynb  eda.ipynb  embbedding.ipynb  get_positive_zone.ipynb  giou.ipynb  inference.ipynb  labels.ipynb  list_patch.ipynb  openslide.ipynb  owkin.ipynb  plot_rectangle.ipynb  pyfast.ipynb  submit.ipynb  tiff_images.ipynb  tile.ipynb
postprocessing/: index.html
references/: index.html
results/: index.html
scripts/: autodoc_typer.sh
search/: search_index.json
tests/: test_dataset.py  test_eval.py
trustii/: index.html
(+6 files in other folders)
